--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-import": "^1.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -30,11 +31,11 @@
     "path": "^0.12.7",
     "postcss-loader": "^2.0.5",
     "prop-types": "^15.5.10",
-    "rc-animate": "^2.3.6",
-    "rc-banner-anim": "^0.5.13",
-    "rc-queue-anim": "^1.0.5",
-    "rc-scroll-anim": "^1.0.5",
-    "rc-tween-one": "^1.2.7",
+    "rc-animate": "^2.4.1",
+    "rc-banner-anim": "^0.5.16",
+    "rc-queue-anim": "^1.2.2",
+    "rc-scroll-anim": "^1.0.7",
+    "rc-tween-one": "^1.4.4",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
