--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "webpack": "^2.6.1"
   },
   "devDependencies": {
-    "antd": "^2.10.4",
-    "axios": "^0.16.2",
+    "antd": "^2.12.5",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-import": "^1.2.1",
@@ -20,6 +19,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.4",
     "es6-promise": "^4.1.0",
     "extract-text-webpack-plugin": "^2.1.2",
