--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^3.0.5",
-    "single-react-loader": "^1.2.1",
-    "webpack": "^2.6.1"
+    "single-react-loader": "^1.2.1"
   },
   "devDependencies": {
     "antd": "^2.12.5",
@@ -44,12 +43,12 @@
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.8",
-    "webpack": "^3.0.0",
+    "webpack": "^3.5.1",
     "webpack-dev-server": "^2.4.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node build/webpack.dev.conf.js --inline",
+    "dev": "node ./src/assets/theme/copyThemeToAntd&&node build/webpack.dev.conf.js --inline",
     "build": "webpack --config build/webpack.base.conf.js"
   },
   "author": "",
